# 3th3rn3t

./: .gdbinit  Cargo.toml  README.md  gdb.sh  semihosting.py  sin.py
.cargo/: config
src/: font.rs  graphics.rs  lib.rs  main.rs  rng.rs  sin.hex  sound.rs
