[package]
name = "3th3rn3t_drivers"
version = "0.1.0"
authors = ["Benjamin Lipp and Julian Herr"]

[[bin]]
doc = true
name = "3th3rn3t"

[dependencies]
cortex-m = "0.1.4"
r0 = "0.1.0"
bit_field = "0.7.0"

[dependencies.stm32f7_discovery]
git = "https://github.com/blipp/stm32f7-discovery.git"
version = "0.1.0"

[profile.release]
lto = true
